Final copy for 30 April 2023

--- a/newsletter/2023-04-30.md
+++ b/newsletter/2023-04-30.md
@@ -21,51 +21,26 @@ There are a variety of extensions that enable a similar toggle on other browsers
 
 I estimate that disabling JavaScript will thwart 80% of the paywalls you'll encounter on the web. The only exceptions are publications that have set up server-side paywalls that run on *their* computers, not yours, sometimes called "hard" paywalls in the media industry. These are usually financial publications like the Wall Street Journal, Bloomberg News, and the Financial Times.
 
-So why doesn't everyone in the industry set up their paywall that way? It's because they're trying to balance two strategic goals for their businesses -- generating subscription revenue and maximizing site traffic.
+So why doesn't everyone in the industry set up their paywall that way? It's because they're trying to balance two strategic goals for their businesses -- generating subscription revenue and maximizing site traffic. These goals are often in tension, so publications purposely make their paywalls "porous," as the traffic from users employing various workarounds still counts in their metrics.
 
-These goals are often in tension, so publications purposely make their paywalls "porous," as the traffic from users employing various workarounds still counts in their metrics. There's been coverage of this in multiple media trade publications like the [Columbia Journalism Review](https://www.cjr.org/business_of_news/news-paywalls-new-york-times-wall-street-journal.php) and [Poynter.org](https://www.poynter.org/commentary/analysis/2022/how-free-service-journalism-and-paywalls-can-coexist/). So rest assured, publishers know about it.
-
-In fact, they purposefully exploit it in their own way.
+There's been coverage of this tactic in multiple media trade publications like the [Columbia Journalism Review](https://www.cjr.org/business_of_news/news-paywalls-new-york-times-wall-street-journal.php) and [Poynter.org](https://www.poynter.org/commentary/analysis/2022/how-free-service-journalism-and-paywalls-can-coexist/). So rest assured, publishers know about it. In fact, they purposefully exploit it in their own way.
 
 On to the week's (now totally accessible) headlines:
 
-<!--
+- **Former OpenAI researcher Paul Christiano** told the Bankless podcast there's a [50% chance of "catastrophe"](https://www.youtube.com/watch?v=GyFkWb903aU) if and when artificial intelligence achieves human-level capabilities. Yikes.
 
-- Tiffany Fong reports there are new bids on Celsius assets. (https://tiffanyfong.substack.com/p/new-bids-on-celsius-networks-assets-9a7)
+- **CoinDesk's annual Consensus conference** wrapped up in Austin. The site's editors and reporters [recapped some of the major themes](https://www.coindesk.com/consensus-magazine/2023/04/28/5-consensus-2023-takeaways/) they noticed, including an emphasis on regulatory issues and crypto adoption.
 
-- Consensus in Austin. <!-- https://www.coindesk.com/consensus-magazine/2023/04/28/5-consensus-2023-takeaways/
+- **Almost half of millennials** in a recent multigenerational survey by the trading platform Bitget [reported owning crypto](https://www.bitget.com/en/blog/articles/bitget-study-reveals-millennials-and-gen-z-tend-to-build-a-more-crypto-favorable-society). The survey comprised 255,000 responses across 26 countries.
 
-- US is outsourcing tech antitrust regulation to Europe. https://www.nytimes.com/2023/04/27/opinion/microsoft-activision-ftc-antitrust-grail-eu.html
+- **Security experts** have [identified a new malware](https://bitcoinist.com/new-atomic-malware-on-macos-targets-crypto-wallets/) targeting crypto wallets on Macs.
 
-- Binance is still investing: https://www.theblock.co/post/228565/binance-labs-yibo-ling-investments
+- **Lightning Labs released** an [update](https://decrypt.co/138381/lightning-labs-bitcoin-billions-update) to its litd software package for running nodes on the popular Lightning Network for bitcoin payments. The [latest version](https://lightning.engineering/posts/2023-04-26-litd-release/) includes improved support for managing fees and custodial accounts.
 
-- ICYMI: Decrypt notes that Gary Gensler said in remarks at MIT in 2018 that he believes Etehreum is not a security. https://decrypt.co/138334/gary-gensler-sec-ethereum-not-security-mit-2018
+- **A former chairman of the Securities and Exchange Commission** and a former director of the National Economic Council complained in a New York Times op-ed that [Europe is usurping](https://www.nytimes.com/2023/04/27/opinion/microsoft-activision-ftc-antitrust-grail-eu.html) America's sovereign right to regulate antitrust issues in tech. Ummm...
 
-- PayPal enables crypto transfers for Venmo users. https://www.theblock.co/post/228824/paypal-extending-crypto-transfers-to-more-than-60-million-venmo-customers
+- **Comedian John Oliver** aired a [followup rant](https://www.youtube.com/watch?v=o7zazuy_UfI) about crypto on his HBO show Last Week Tonight. He initially covered the topic back [in 2018](https://www.youtube.com/watch?v=g6iDZspbRMg), memorably describing crypto as "everything you don't understand about money combined with everything you don't understand about computers." His latest installment updates his skeptical take to reflect the meltdown of FTX and other industry excesses.
 
-- Data brokers: https://slate.com/technology/2023/04/data-broker-inference-privacy-legislation.html
-
-- Fode Diop vid on using ChatGPT to learn bitcoin programming. https://www.youtube.com/watch?v=NeM3WlFZO8E
-
-- Jaron Lanier on AI: https://www.newyorker.com/science/annals-of-artificial-intelligence/there-is-no-ai
-
-- Bitcoin use cases are seeing "explosive growth." https://www.coindesk.com/tech/2023/04/28/bitcoin-use-cases-are-seeing-explosive-growth-trust-machines-says/
-
-- Future Tense on the death of the blue check: https://slate.com/technology/2023/04/blue-check-funeral.html
-
-- New lightning node software: https://decrypt.co/138381/lightning-labs-bitcoin-billions-update
-
-- A former researcher at OpenAI says there's a 50% chance artificial intelligence will "end in catastrophe." https://decrypt.co/138310/openai-researcher-chance-ai-catastrophe
-
-- New malware targeting crypto wallets on Macs. https://bitcoinist.com/new-atomic-malware-on-macos-targets-crypto-wallets/
-
-- Almost half of milennials in advanced economies own crypto: https://bitcoinist.com/research-shows-millennials-major-economies-crypto/
-
-- Bitcoin is poised for a comeback: https://www.coindesk.com/markets/2023/04/28/bitcoin-is-poised-to-reclaim-cryptos-spotlight-berenberg/
-
-- New John Oliver rant on crypto: https://www.youtube.com/watch?v=o7zazuy_UfI&list=WL&index=10&t=20s
-
--->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
