Final copy for 7 May 2023

--- a/newsletter/2023-05-07.md
+++ b/newsletter/2023-05-07.md
@@ -1,4 +1,4 @@
-# The señora doth protest too much, methinks
+# The señora doth protest too much, methinks.
 ## #Web3Weekly: April 30 to May 6, 2023
 
 **Argentina's central bank** just banned payment apps from [offering crypto transactions](https://decrypt.co/139068/argentinas-central-bank-clamps-down-on-bitcoin) in that country.
@@ -17,52 +17,21 @@ Better for these folks to own that trusty old standby, the peso. It's issued by 
 
 The week's other notable headlines:
 
+- **Coinbase announced** it will launch a [new international exchange](https://www.coinbase.com/blog/introducing-coinbase-international-exchange). The company also announced stronger than expected [first-quarter earnings](https://www.theblock.co/post/229585/coinbase-earnings-crypto-exchange-2), helped in part by interest on its USDC holdings.
+
+- **Bankrupt crypto lender Voyager Digital** is going to [liquidate its remaining assets](https://www.coindesk.com/policy/2023/05/05/voyager-digital-plans-to-liquidate-assets-wind-down-after-sale-dreams-crushed/) after failing to find a buyer for the company.
+
 - **The White House proposed** a 30% [excise tax on crypto miners](https://www.whitehouse.gov/cea/written-materials/2023/05/02/cost-of-cryptomining-dame-tax/) to offset environmental costs.
+
+- **Decrypt reports** that Ethereum [staking has outpaced withdrawals](https://decrypt.co/139152/ethereum-staking-deposits-outpace-withdrawals-eth) by roughly $189 million worth of tokens since the network's recent Shanghai upgrade. That's a promising sign of investor and developer confidence in the network's future.
 
 - **The Securities and Exchange Commission** announced it has issued a [$279 million wistleblower](https://www.sec.gov/news/press-release/2023-89) reward, easily the biggest such payout in the agency's history to someone who provided information on a single case. The U.S. regulator didn't say which case the payment pertained to, however.
 
-- **A Pepe the Frog memecoin** surpassed $1 billion in market valuation, putting it [among the top 50 tokens](https://www.theblock.co/post/229676/pepe-memecoin-tops-1-billion-market-cap-even-as-binance-flags-lack-of-utility) globally. Groan... <!-- https://www.coindesk.com/markets/2023/05/05/pepecoins-bewildering-rise-turned-a-pittance-into-an-almost-5000000-meme-coin-profit/ -->
+- **Computer scientist Geoffrey Hinton,** sometimes referred to as "the Godfather of artificia intelligence," quite his job at Google. In an [interview with the New York Times](https://www.nytimes.com/2023/05/01/technology/ai-google-chatbot-engineer-quits-hinton.html), he said he left in order to speak more freely about the risks to society of pushing ahead too quickly with widely available AI apps.
+
+- **A Pepe the Frog memecoin** surpassed $1 billion in market valuation, putting it [among the top 50 tokens](https://www.theblock.co/post/229676/pepe-memecoin-tops-1-billion-market-cap-even-as-binance-flags-lack-of-utility) globally. Groan... 
 
 - **Police in Old Bridge, New Jersey** are investigating the mysterious dumping of [several hundred pounds of pasta](https://www.nytimes.com/2023/05/04/us/new-jersey-pasta-dump.html?smtyp=cur&smid=fb-nytimes) beside a creek in the local woods.
-
-<!--
-
-- ETH staking is outweighing withdrawals. https://decrypt.co/139152/ethereum-staking-deposits-outpace-withdrawals-eth
-
-- Voyager has decided to liquidate. https://www.coindesk.com/policy/2023/05/05/voyager-digital-plans-to-liquidate-assets-wind-down-after-sale-dreams-crushed/ | https://decrypt.co/139079/crypto-broker-voyager-will-liquidate-assets
-
-- Coinbase is launching an international exchange for pro traders. <!-- Need link to company post  | Earnings: https://www.theblock.co/post/229585/coinbase-earnings-crypto-exchange-2 | https://www.coindesk.com/business/2023/05/05/coinbase-jumps-16-post-earnings-analysts-praise-results-but-worry-about-regulatory-uncertainty/
-
-- New Alibaba web3 on-ramp using Avalanche chain: https://techcrunch.com/2023/05/04/alibaba-cloud-avalanche-partner-to-deploy-metaverses-on-the-blockchain/
-
-
-- A new survey identified Lisbon as Europe's most popular crypto hub. https://decrypt.co/138706/new-york-berlin-tied-second-place-globe-most-important-crypto-hub-survey
-
-- "The Godfather of AI" just left Google, and he's worried about the technology's future. https://www.nytimes.com/2023/05/01/technology/ai-google-chatbot-engineer-quits-hinton.html | What are the dangers of AI? https://www.nytimes.com/2023/05/01/technology/ai-problems-danger-chatgpt.html
-
-- Latest Midjourney upgrade is enabling better deepfakes. https://decrypt.co/139118/ai-deepfakes-just-got-better-midjourney-upgrade
-
-- A developer found a major bug in Ordinals, the software for issuing NFTs on the bitcoin blockchain. https://www.theblock.co/post/229653/bitcoin-ordinals-inscription-numbering-challenge
-
-- DeSantis wants to ban CBDC in FL. Suarez says that doesn't go far enough... <!-- See Tweets, links elsewhere...  | Mississippi bans CBDC transactions as well? | https://www.coindesk.com/policy/2023/05/04/north-carolina-house-unanimously-votes-to-ban-digital-dollar-payments-to-the-state/
-
-- The Block: Former Paxful CEO Ray Youssef is working with Jack Dorsey’s TBD to allow anyone to create permissionless peer-to-peer marketplaces using Nostr and the Lightening Network. https://www.theblock.co/post/229665/paxful-ray-youssef-jack-dorsey | He also wants to re-launch Paxful https://www.theblock.co/post/229628/paxful-co-founder-plots-ambitious-plan-to-reopen-p2p-crypto-trading-after-company-implosion
-
-- Dubai reprimanded Three Arrows founders. <!-- TKTKTKT
-
-- MicroStrategy posted its first profit in 9 quarters thanks to a BTC-related tax break, Bberg says. <!-- Need link
-
-- Coinshares' Meltem points out PayPal, Visa, MasterCard have all recently announced new initiatives on public blockchains. They really shine as venues for moving money, including cross-border, etc. <!-- Need link
-
-- Dorsey isn't happy with Musk's stewardship of Twitter. https://www.washingtonpost.com/technology/2023/04/29/elon-musk-twitter-jack-dorsey/?itid=cp_CP-6_1
-
-- Angwin on fear vs hate on social networks: https://www.nytimes.com/2023/05/06/opinion/fear-speech-social-media.html
-
-- WaPo: Meta employees are losing confidence in Zuckerberg. https://www.washingtonpost.com/technology/2023/04/30/mark-zuckerberg-meta-layoffs/
-
-- Ben Smith book. <!-- Need link
-
- -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
