Edits to headline, ads, news items.

--- a/newsletter/2023-05-14.md
+++ b/newsletter/2023-05-14.md
@@ -1,5 +1,5 @@
 
-# Blockchain is beautiful
+# Reminder: Public blockchains rock
 ## #Web3Weekly: May 7-13, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -21,13 +21,15 @@
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
-These are all characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market.
+These are actual characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market. Right now. Even with the token market still well below its all-time high set in late 2021, when global crypto valuation topped $3 trillion.
 
-In my opinion, they are also reasons we should ultimately be rooting for these chains (and other open ones like them) to win, even if there are some missteps along the way. We generally need our technology to look more like the above list, to make the internet truly work for the greater good like it's supposed to.
+In my opinion, the above bullet points are also reasons we should ultimately be rooting for these chains (and other public ones like them) to win, even if there are some missteps along the way. We generally need our technology to look more like the above list, to make the internet truly work for the greater good like it's supposed to.
 
-To put it a different way: We don't just need to regulate or cajole Big Tech to do better. We need alternatives that cut them out altogether.
+On to the week's notable headlines:
 
-The week's headlines:
+- tk
+- tk
+- tk
 
 <!--
 
@@ -49,10 +51,18 @@ The week's headlines:
 
 <hr>
  <em>
- **Launching a new token?** Bitbond's [intuitive platform](https://tokentool.bitbond.com/?utm_content=) will help you get through the process in minutes. No development experience needed. Even better, #Web3Weekly readers get a special 10% discount on your issuance fee when you use the discount code QEHECMGR at checkout. **[Get started with Bitbond today!](https://tokentool.bitbond.com/?utm_content=)**
+  <p id="adtag">ADVERTISEMENT</p>
+  <strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed. Even better, #Web3Weekly readers get a special 10% discount on your issuance fee when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
  </em>
+
+ <style>
+  #adtag {font-size: 8px}
+ </style>
 <hr>
 
+- tk
+- tk
+- tk 
 <!--
 
 - Goldman, Microsoft, an others are forming the Phantom Network. https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton
