Fleshing out news items

--- a/newsletter/2023-05-14.md
+++ b/newsletter/2023-05-14.md
@@ -13,73 +13,63 @@
 
 **Imagine a couple of technologies that:**
 
-- Are fully open source, including *publicly available, transparent algorithms.* No secret sauce working contrary to users' privacy, a shared sense of objective truth, and other things [necessary to modern society](https://www.theguardian.com/books/2016/oct/27/cathy-oneil-weapons-of-math-destruction-algorithms-big-data) as we know it.
+- Are fully open source, including *publicly available, transparent algorithms.* No secret sauce working contrary to users' privacy, a shared sense of objective truth, and other things [necessary for modern society](https://www.theguardian.com/books/2016/oct/27/cathy-oneil-weapons-of-math-destruction-algorithms-big-data) as we know it to continue.
 
 - Are relatively untouched by -- and definitely not controlled by -- the oligarchy of [massive public U.S. tech companies](https://www.forbes.com/advisor/investing/faang-stocks-mamaa/) that otherwise dominate everyone's experience of the internet.
 
-- Carry a combined market valuation north of $700 billion anyway.
+- Carry a combined market valuation north of $700 billion regardless.
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
 These are actual characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market. Right now. Even with the token market still well below its all-time high set in late 2021, when global crypto valuation topped $3 trillion.
 
-In my opinion, the above bullet points are also reasons we should ultimately be rooting for these chains (and other public ones like them) to win, even if there are some missteps along the way. We generally need our technology to look more like the above list, to make the internet truly work for the greater good like it's supposed to.
+In my opinion, the above bullet points are also reasons we should ultimately be rooting for public chains like Bitcoin and Ethereum to win, even if there are some missteps along the way. We generally need our technology to look more like the above list, to make the internet truly work for the greater good like it's supposed to.
 
 On to the week's notable headlines:
 
-- tk
-- tk
-- tk
+- **Token prices suffered a broad pullback.** Bitcoin posted a [weekly decline](https://www.coindesk.com/markets/2023/05/12/bitcoin-loses-10-on-the-week-as-memecoins-tumble/) of 10% through late Friday trading, hurt by continued worries about the U.S. regulatory picture. The price correlation between BTC and ETH also tumbled to [an 18-month low](https://www.theblock.co/post/230718/bitcoin-ether-price-correlation). Several memecoins were sharply lower, including a Pepe the Frog coin that tumbled [more than 60%](https://www.coindesk.com/markets/2023/05/12/bitcoin-loses-10-on-the-week-as-memecoins-tumble/).
 
-<!--
+- **The recent introduction of non-fungible tokens** on the Bitcoin network is slowing transaction confirmations broadly. That's led to an increasingly heated debate pitting NFT issuers against Bitcoin developers and investors who want the platform to remain strictly a monetary network. CoinDesk reports that 
 
-- Tough week in markets. <!-- Need link  BTC-ETH correlation way down lately. https://www.theblock.co/post/230718/bitcoin-ether-price-correlation
 
-- Bitcoin core dev pissed about Ordinals. https://bitcoinist.com/bitcoin-core-dev-spam-filter-kill-ordinals-brc20/
+Ordinals:
 
-- AI scams. https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html
+https://bitcoinist.com/bitcoin-core-dev-spam-filter-kill-ordinals-brc20/
+https://www.theblock.co/post/229833/binance-bitcoin-ordinals-brc-20-tokens-value
+ | CoinDesk reports that bitcoiners in Africa are increasingly moving to the Lightning Network due to a recent spike in fees on the main Bitcoin network to two-year highs. https://www.coindesk.com/tech/2023/05/09/africa-moves-to-lighting-stablecoins-as-bitcoin-transaction-fees-soar/ | https://www.coindesk.com/tech/2023/05/12/among-bitcoin-developers-debate-is-raging-over-whether-to-censor-ordinals-brc-20s/
+
+- Ethereum suffered finality issues. https://decrypt.co/139961/ethereum-network-suffers-finality-issues-heres-what-that-means | https://www.coindesk.com/tech/2023/05/12/ethereum-resumes-finalizing-blocks-after-second-performance-hiccup-in-24-hours/
 
 - Tether reported profits: https://www.theblock.co/post/230241/tether-attestation-report-q1-2023
 
-- CoinDesk reports that bitcoiners in Africa are increasingly moving to the Lightning Network due to a recent spike in fees on the main Bitcoin network to two-year highs. https://www.coindesk.com/tech/2023/05/09/africa-moves-to-lighting-stablecoins-as-bitcoin-transaction-fees-soar/
+- Binance said it will cease operations in Canada due to regulatory issues. https://www.coindesk.com/business/2023/05/12/binance-announces-exit-from-canada-citing-regulatory-tensions/
 
-- Ordinals item: https://www.theblock.co/post/229833/binance-bitcoin-ordinals-brc-20-tokens-value
-
-- Decrypt reports that the chips from crypto mining rigs aren't well adapted for artificial intelligence. Sorry. https://decrypt.co/139825/crypto-mining-chips-ai-heres-why
-
-- PayPal users are now holding more than $1 billion in coins, mostly bitcoin and ether. https://www.theblock.co/post/230002/paypal-ether-bitcoin-holdings -->
+- PayPal users are now holding more than $1 billion in coins, mostly bitcoin and ether. https://www.theblock.co/post/230002/paypal-ether-bitcoin-holdings
 
 <hr>
  <em>
   <p id="adtag">ADVERTISEMENT</p>
-  <strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed. Even better, #Web3Weekly readers get a special 10% discount on your issuance fee when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
+  <strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers 10% off on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
  </em>
-
- <style>
-  #adtag {font-size: 8px}
- </style>
 <hr>
 
-- tk
-- tk
-- tk 
-<!--
-
-- Goldman, Microsoft, an others are forming the Phantom Network. https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton
+- El Salvador update https://decrypt.co/139944/bitcoin-surfing-tourists-are-flocking-to-el-salvador-whats-the-big-deal
 
 - Goldman analysts say interest in crypto has recently waned among the ultra-rich. https://www.theblock.co/post/229887/goldman-sachs-crypto-survey
 
+- Goldman, Microsoft, an others are forming the Phantom Network. https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton
+
 - An ex-Coinbase executive got a two-year prison term for violating insider trading rules in the U.S. https://www.theblock.co/post/229991/ex-coinbase-product-manager-handed-two-year-prison-term-for-insider-trading-reuters | https://www.coindesk.com/policy/2023/05/09/ex-coinbase-product-manager-sentenced-to-2-years-in-prison-for-insider-trading/
 
-- Pepe memecoin crash. <!-- Need link
+- Pepe memecoin crash. <!-- Need link -->
 
-- **A missed free throw?** Shaq on not being served properly by FTX.
+- AI scams. https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html
 
-- NYC has enough vacant office space to fill multiple Empire State Buildings. https://www.nytimes.com/interactive/2023/05/10/opinion/nyc-office-vacancy-playground-city.html
+- Decrypt reports that the chips from crypto mining rigs aren't well adapted for artificial intelligence. Sorry. https://decrypt.co/139825/crypto-mining-chips-ai-heres-why
+
+- Former FTX exec is cooperating in lawsuit against celebrity endorsers of the failed exchange. https://decrypt.co/139866/former-ftx-exec-cooperating-lawsuit-against-celebrity-promoters Shaq on not being served properly by FTX. <!-- Need link -->
 
 - **A 4.5 billion-year-old meteorite struck a house in New Jersey,** a rare event in such a populated area. The could hold clues about the origins of our solar system.
-
--->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
