Fleshing out summary items

--- a/newsletter/2023-05-14.md
+++ b/newsletter/2023-05-14.md
@@ -1,5 +1,4 @@
-
-# Reminder: Public blockchains rock
+# Public blockchains rock.
 ## #Web3Weekly: May 7-13, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -21,55 +20,44 @@
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
-These are actual characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market. Right now. Even with the token market still well below its all-time high set in late 2021, when global crypto valuation topped $3 trillion.
+These are actual characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market. Right now. Even with the global token market still well below its all-time high of a $3 trillion valuation set in late 2021.
 
-In my opinion, the above bullet points are also reasons we should ultimately be rooting for public chains like Bitcoin and Ethereum to win, even if there are some missteps along the way. We generally need our technology to look more like the above list, to make the internet truly work for the greater good like it's supposed to.
+These are real successes -- ones that are generally overlooked, in my opinion. Between the obsession with daily swings in the token market and crypto folks' propensity to squabble about differences between their favorite chains, it's easy to lose sight of this bigger picture. 
+
+Ultimately, it shouldn't be about "my chain is better than your chain." It's about replacing the current shit that the masses of people are actually using, made by a shitty oligarchy based in a single country. That's what it will take to truly make a better internet for everyone.
 
 On to the week's notable headlines:
 
-- **Token prices suffered a broad pullback.** Bitcoin posted a [weekly decline](https://www.coindesk.com/markets/2023/05/12/bitcoin-loses-10-on-the-week-as-memecoins-tumble/) of 10% through late Friday trading, hurt by continued worries about the U.S. regulatory picture. The price correlation between BTC and ETH also tumbled to [an 18-month low](https://www.theblock.co/post/230718/bitcoin-ether-price-correlation). Several memecoins were sharply lower, including a Pepe the Frog coin that tumbled [more than 60%](https://www.coindesk.com/markets/2023/05/12/bitcoin-loses-10-on-the-week-as-memecoins-tumble/).
+- **Token prices suffered a broad pullback,** hurt by a strengthening U.S. dollar. Bitcoin posted a [weekly decline](https://decrypt.co/140053/this-week-in-coins-bitcoin-and-ethereum-lead-market-pullback-as-dollar-rises) of 7%. The price correlation between BTC and ETH also tumbled to [an 18-month low](https://www.theblock.co/post/230718/bitcoin-ether-price-correlation). Several memecoins were sharply lower, including a Pepe the Frog coin that tumbled [more than 60%](https://www.coindesk.com/markets/2023/05/12/bitcoin-loses-10-on-the-week-as-memecoins-tumble/).
 
-- **The recent introduction of non-fungible tokens** on the Bitcoin network is slowing transaction confirmations broadly. That's led to an increasingly heated debate pitting NFT issuers against Bitcoin developers and investors who want the platform to remain strictly a monetary network. CoinDesk reports that 
+- **The recent introduction of non-fungible tokens** on the Bitcoin network is slowing transaction confirmations broadly and [pushing fees higher](https://www.coindesk.com/tech/2023/05/08/bitcoins-brc-20-explosion-sends-users-scrambling-for-options-including-lightning/). That's led to an increasingly heated debate pitting NFT issuers against Bitcoin developers and investors who want the platform to remain [strictly a monetary network](https://www.coindesk.com/tech/2023/05/12/among-bitcoin-developers-debate-is-raging-over-whether-to-censor-ordinals-brc-20s/).
 
+- **Tether reported** a [$1.5 billion profit](https://www.theblock.co/post/230241/tether-attestation-report-q1-2023) in the first quarter, more than double the previous period.
 
-Ordinals:
-
-https://bitcoinist.com/bitcoin-core-dev-spam-filter-kill-ordinals-brc20/
-https://www.theblock.co/post/229833/binance-bitcoin-ordinals-brc-20-tokens-value
- | CoinDesk reports that bitcoiners in Africa are increasingly moving to the Lightning Network due to a recent spike in fees on the main Bitcoin network to two-year highs. https://www.coindesk.com/tech/2023/05/09/africa-moves-to-lighting-stablecoins-as-bitcoin-transaction-fees-soar/ | https://www.coindesk.com/tech/2023/05/12/among-bitcoin-developers-debate-is-raging-over-whether-to-censor-ordinals-brc-20s/
-
-- Ethereum suffered finality issues. https://decrypt.co/139961/ethereum-network-suffers-finality-issues-heres-what-that-means | https://www.coindesk.com/tech/2023/05/12/ethereum-resumes-finalizing-blocks-after-second-performance-hiccup-in-24-hours/
-
-- Tether reported profits: https://www.theblock.co/post/230241/tether-attestation-report-q1-2023
-
-- Binance said it will cease operations in Canada due to regulatory issues. https://www.coindesk.com/business/2023/05/12/binance-announces-exit-from-canada-citing-regulatory-tensions/
-
-- PayPal users are now holding more than $1 billion in coins, mostly bitcoin and ether. https://www.theblock.co/post/230002/paypal-ether-bitcoin-holdings
+- **Binance said** it will [cease operations in Canada](https://twitter.com/binance/status/1657099651210969088) due to what it views as overly restrictive new regulations.
 
 <hr>
  <em>
   <p id="adtag">ADVERTISEMENT</p>
-  <strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers 10% off on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
+  <strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers will save 10% on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
  </em>
 <hr>
 
-- El Salvador update https://decrypt.co/139944/bitcoin-surfing-tourists-are-flocking-to-el-salvador-whats-the-big-deal
+- **Bittrex filed** for Chapter 11 [bankruptcy protection](https://decrypt.co/139368/american-crypto-exchange-bittrex-files-for-chapter-11-bankruptcy). The Seattle-based exchange, which was recently slapped with charbes by U.S. regulators for not registering as a securities broker-dealer, says it has more than 100,000 creditors who are owed up to $1 billion in total.
 
-- Goldman analysts say interest in crypto has recently waned among the ultra-rich. https://www.theblock.co/post/229887/goldman-sachs-crypto-survey
+- **A former Coinbase product manager** was sentenced to two years in prison for insider trading, the first time U.S. prosecutors and courts have [applied such laws to crypto](https://arstechnica.com/tech-policy/2023/05/1-5m-crypto-scheme-leads-to-2-year-prison-term-for-ex-coinbase-manager/).
 
-- Goldman, Microsoft, an others are forming the Phantom Network. https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton
+- **FTX's former compliance chief** is cooperating with plaintiffs' attorneys in a lawsuit against celebrities who [promoted the bankrupt exchange](https://decrypt.co/139866/former-ftx-exec-cooperating-lawsuit-against-celebrity-promoters).
 
-- An ex-Coinbase executive got a two-year prison term for violating insider trading rules in the U.S. https://www.theblock.co/post/229991/ex-coinbase-product-manager-handed-two-year-prison-term-for-insider-trading-reuters | https://www.coindesk.com/policy/2023/05/09/ex-coinbase-product-manager-sentenced-to-2-years-in-prison-for-insider-trading/
+- **New regulatory filings** show PayPal users are holding [almost $1 billion in digital assets](https://www.theblock.co/post/230002/paypal-ether-bitcoin-holdings), mostly bitcoin and ether.
 
-- Pepe memecoin crash. <!-- Need link -->
+- **Goldman Sachs, Microsoft, Moody's,** and other corporate heavyweights are [joining the Canton Network](https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton), a new blockcain platform optimized for managing institutional assets. Canton is set to launch in July, with fintech startup Digital Assets leading its development.
 
-- AI scams. https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html
+- **Facebook parent Meta warned** that a wave of hackers is now [targeting users](https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html) interested in the artificial intelligence app ChatGPT, in a trend akin to the proliferation of crypto scams.
 
-- Decrypt reports that the chips from crypto mining rigs aren't well adapted for artificial intelligence. Sorry. https://decrypt.co/139825/crypto-mining-chips-ai-heres-why
+- **Decrypt reports** that the chips from inactive crypto mining rigs are [poorly suited for AI applications](https://decrypt.co/139825/crypto-mining-chips-ai-heres-why). Sorry.
 
-- Former FTX exec is cooperating in lawsuit against celebrity endorsers of the failed exchange. https://decrypt.co/139866/former-ftx-exec-cooperating-lawsuit-against-celebrity-promoters Shaq on not being served properly by FTX. <!-- Need link -->
-
-- **A 4.5 billion-year-old meteorite struck a house in New Jersey,** a rare event in such a populated area. The could hold clues about the origins of our solar system.
+- **A 4.5 billion-year-old meteorite struck a house in New Jersey,** a rare event in such a populated area. The rock [could hold clues](https://www.space.com/meteorite-strike-new-jersey-house-confirmed) about the origins of our solar system.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
